--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,18 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/paginas_compartidasdb
-spring.datasource.username=root
+# H2 DB
+dpring.datasource.url=jdbc:h2:mem:paginas-compartidasdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+
+# Hibernate
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+# API
+server.servlet.context-path=/api/v1
 
 # storage
 storage.path = /pcom
