--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # H2 DB
-dpring.datasource.url=jdbc:h2:mem:paginas-compartidasdb
+spring.datasource.url=jdbc:h2:mem:paginas-compartidasdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.datasource.username=sa
