Arreglo del error del directorio de las imagenes

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.data.web.pageable.page-parameter=p
 
 #OpenApi(Swagger)
 springdoc.packagesToScan=com.nocountry.appintercambiolibros.controllers
-springdoc.pathsToMatch=/v1, /api/v1/libros/**, /api/v1/imagenes
+springdoc.pathsToMatch=/v1, /api/v1/libros/**, /api/v1/imagenes/**
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/doc/swagger-ui.html
