Agregando metodo agregar comentario, eliminar c, actualizar c y traer c por libro

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,6 @@
 # H2 DB
-#spring.datasource.url=jdbc:h2:mem:paginas-compartidasdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.h2.console.enabled=true
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.hibernate.ddl-auto=create-drop
-
-# Hibernate
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:mem:paginas-compartidasdb
+spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 
 # storage
