--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,7 @@
 # H2 DB
-spring.datasource.url=jdbc:h2:mem:paginas-compartidasdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.h2.console.enabled=true
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=${DB_URL}
 
 # Hibernate
-#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # storage
@@ -25,3 +19,11 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/doc/swagger-ui.html
 
+# Spring Cloud GCP
+spring.cloud.gcp.project-id=${GCP_PROJECT_ID}
+spring.cloud.gcp.credentials.location=classpath:${GCP_CREDENTIALS_LOCATION}
+
+gcp.bucket.name=${GCP_BUCKET_NAME}
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
